# fit_tracker

./: .gitignore  CMakeLists.txt  Cargo.toml  README  docker-compose.yml  gitignore  main.py  main_scale.py  requierments.txt  settings.py  testBench.py
apps/mongo/: mongo-init.js
src/: db.py
src/db/: db.cpp  db.h
src/scale/: normalizer.py  reader.py  scale.py  test_gpio.py
src/scale/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/server/: fitbit_listener.py  gather_keys_oauth2.py  gmail.py  loseit.py  test_scale_output_server.py
